LDEV-3293: Add Spring 4.0.6 libraries and their sources. Make LAMS use them and reference Hibernate 4.3.5 embedded in WildFly 8.1.