@@ -23,7 +23,6 @@
  *
  */
 package org.hibernate.sql;
-
 import java.util.HashSet;
 import java.util.Set;
 
@@ -34,10 +33,10 @@ import java.util.Set;
  */
 public class OracleJoinFragment extends JoinFragment {
 
-	private StringBuffer afterFrom = new StringBuffer();
-	private StringBuffer afterWhere = new StringBuffer();
+	private StringBuilder afterFrom = new StringBuilder();
+	private StringBuilder afterWhere = new StringBuilder();
 
-	public void addJoin(String tableName, String alias, String[] fkColumns, String[] pkColumns, int joinType) {
+	public void addJoin(String tableName, String alias, String[] fkColumns, String[] pkColumns, JoinType joinType) {
 
 		addCrossJoin( tableName, alias );
 
@@ -45,12 +44,12 @@ public class OracleJoinFragment extends JoinFragment {
 			setHasThetaJoins( true );
 			afterWhere.append( " and " )
 					.append( fkColumns[j] );
-			if ( joinType == RIGHT_OUTER_JOIN || joinType == FULL_JOIN ) afterWhere.append( "(+)" );
+			if ( joinType == JoinType.RIGHT_OUTER_JOIN || joinType == JoinType.FULL_JOIN ) afterWhere.append( "(+)" );
 			afterWhere.append( '=' )
 					.append( alias )
 					.append( '.' )
 					.append( pkColumns[j] );
-			if ( joinType == LEFT_OUTER_JOIN || joinType == FULL_JOIN ) afterWhere.append( "(+)" );
+			if ( joinType == JoinType.LEFT_OUTER_JOIN || joinType == JoinType.FULL_JOIN ) afterWhere.append( "(+)" );
 		}
 
 	}
@@ -70,8 +69,8 @@ public class OracleJoinFragment extends JoinFragment {
 
 	public JoinFragment copy() {
 		OracleJoinFragment copy = new OracleJoinFragment();
-		copy.afterFrom = new StringBuffer( afterFrom.toString() );
-		copy.afterWhere = new StringBuffer( afterWhere.toString() );
+		copy.afterFrom = new StringBuilder( afterFrom.toString() );
+		copy.afterWhere = new StringBuilder( afterWhere.toString() );
 		return copy;
 	}
 
@@ -104,13 +103,13 @@ public class OracleJoinFragment extends JoinFragment {
 		afterFrom.append( fromFragmentString );
 	}
 
-	public void addJoin(String tableName, String alias, String[] fkColumns, String[] pkColumns, int joinType, String on) {
+	public void addJoin(String tableName, String alias, String[] fkColumns, String[] pkColumns, JoinType joinType, String on) {
 		//arbitrary on clause ignored!!
 		addJoin( tableName, alias, fkColumns, pkColumns, joinType );
-		if ( joinType == JoinFragment.INNER_JOIN ) {
+		if ( joinType == JoinType.INNER_JOIN ) {
 			addCondition( on );
 		}
-		else if ( joinType == JoinFragment.LEFT_OUTER_JOIN ) {
+		else if ( joinType == JoinType.LEFT_OUTER_JOIN ) {
 			addLeftOuterJoinCondition( on );
 		}
 		else {
@@ -127,11 +126,11 @@ public class OracleJoinFragment extends JoinFragment {
 	 * for a filter.
 	 */
 	private void addLeftOuterJoinCondition(String on) {
-		StringBuffer buf = new StringBuffer( on );
+		StringBuilder buf = new StringBuilder( on );
 		for ( int i = 0; i < buf.length(); i++ ) {
 			char character = buf.charAt( i );
-			boolean isInsertPoint = OPERATORS.contains( new Character( character ) ) ||
-					( character == ' ' && buf.length() > i + 3 && "is ".equals( buf.substring( i + 1, i + 4 ) ) );
+			final boolean isInsertPoint = OPERATORS.contains( Character.valueOf( character ) )
+					|| ( character == ' ' && buf.length() > i + 3 && "is ".equals( buf.substring( i + 1, i + 4 ) ) );
 			if ( isInsertPoint ) {
 				buf.insert( i, "(+)" );
 				i += 3;
@@ -143,8 +142,8 @@ public class OracleJoinFragment extends JoinFragment {
 	private static final Set OPERATORS = new HashSet();
 
 	static {
-		OPERATORS.add( new Character( '=' ) );
-		OPERATORS.add( new Character( '<' ) );
-		OPERATORS.add( new Character( '>' ) );
+		OPERATORS.add( Character.valueOf( '=' ) );
+		OPERATORS.add( Character.valueOf( '<' ) );
+		OPERATORS.add( Character.valueOf( '>' ) );
 	}
 }
