@@ -27,7 +27,7 @@ import java.io.Serializable;
 import java.util.Comparator;
 
 import org.hibernate.dialect.Dialect;
-import org.hibernate.engine.SessionImplementor;
+import org.hibernate.engine.spi.SessionImplementor;
 import org.hibernate.type.descriptor.java.LongTypeDescriptor;
 import org.hibernate.type.descriptor.sql.BigIntTypeDescriptor;
 
@@ -43,13 +43,13 @@ public class LongType
 
 	public static final LongType INSTANCE = new LongType();
 
-	@SuppressWarnings({ "UnnecessaryBoxing" })
-	private static final Long ZERO = Long.valueOf( 0 );
+	private static final Long ZERO = (long) 0;
 
 	public LongType() {
 		super( BigIntTypeDescriptor.INSTANCE, LongTypeDescriptor.INSTANCE );
 	}
 
+	@Override
 	public String getName() {
 		return "long";
 	}
@@ -59,31 +59,37 @@ public class LongType
 		return new String[] { getName(), long.class.getName(), Long.class.getName() };
 	}
 
+	@Override
 	public Serializable getDefaultValue() {
 		return ZERO;
 	}
 
+	@Override
 	public Class getPrimitiveClass() {
 		return long.class;
 	}
 
+	@Override
 	public Long stringToObject(String xml) throws Exception {
-		return new Long(xml);
+		return Long.valueOf( xml );
 	}
 
-	@SuppressWarnings({ "UnnecessaryBoxing", "UnnecessaryUnboxing" })
+	@Override
 	public Long next(Long current, SessionImplementor session) {
-		return Long.valueOf( current.longValue() + 1 );
+		return current + 1L;
 	}
 
+	@Override
 	public Long seed(SessionImplementor session) {
 		return ZERO;
 	}
 
+	@Override
 	public Comparator<Long> getComparator() {
 		return getJavaTypeDescriptor().getComparator();
 	}
-	
+
+	@Override
 	public String objectToSQLString(Long value, Dialect dialect) throws Exception {
 		return value.toString();
 	}
